[package]
name = "breakonprocess"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.81", features = ["std"] }
dbgeng = { path = "../.." }
zerocopy = { version = "0.7.32", features = ["derive"] }

[dependencies.windows]
version = "0.54.0"
features = [
    "implement"
]
